# atomics-basics-c-cpp

./: .gitignore  CMakeLists.txt  README.md  acqrel.cpp  acqrelax.cpp  consistency.cpp  relaxed.cpp  relaxed2.cpp  ringbuf.cpp  ringbuf.hpp  spin_ringbuf.cpp  spinlock.hpp  spinner.c  ttas_spinlock.cpp  ttas_spinlock.hpp
cmake/: get_cpm.cmake
tests/: CMakeLists.txt  smoke.cpp
